--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+body, h1{
+  margin: 0;
+  padding: 0;
 }
+
+
 
 .App-header {
   background-color: #282c34;
@@ -22,11 +23,5 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
