--- a/src/style/global/_typography.scss
+++ b/src/style/global/_typography.scss
@@ -1,13 +1,13 @@
 /*! Typebase.less v0.1.0 | MIT License */
 
 
-  @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+  @import url('https://fonts.googleapis.com/css?family=Salsa&display=swap');
   
-  $primary-font: 'Montserrat', sans-serif;
+  $primary-font: 'Salsa', sans-serif;
 
   h1, h2, h3, h4, h5 {
     font-family: $primary-font;
-    font-weight: bold;
+  
     margin: 0 0 15px 0;
     @include breakpoint(md){       
       margin: 0 0 30px 0;         
@@ -18,6 +18,7 @@
   p{
     font-family:$primary-font;
     font-size: 16px;
+    line-height: 1.5em;
     @include breakpoint(md){       
       font-size: 20px;        
      } 
@@ -27,17 +28,21 @@
   h1{
     color: white;
     font-size: 33px;
+    text-shadow: .05em .05em #111111;
+    font-weight: 400;
     @include breakpoint(md){       
-      font-size: 50px;         
+      font-size: 80px;         
      } 
      
   }
 
   h2{
-    color: $accent-color;
-    font-size: 18px;
+    color: black;
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
     @include breakpoint(md){       
-      font-size: 25px;         
+      font-size: 32px;         
      } 
   }
 
@@ -52,7 +57,7 @@
   }
 
   h4{
-    color: black;    
+    color: white;    
     font-size: 30px;
     text-align: center;
     text-transform: capitalize;
