--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,83 +6,172 @@
 
 .hourCard{
   background-color: white;
-   padding: .5em;
-    width: 90px;
+   padding: 1em 2em;
+   display: flex;
+   justify-content: space-between;
+  
+   border: solid 2px blue;
+   margin-bottom: -2px;
+   align-items: center;
     text-align: center;
-    p{
-      padding: .1em 0 1em;
+    img{
+      width: 67px;
     }
+   
     @include breakpoint(md){
-      width: 105px;
+      p{
+        font-size: 32px;
+        img{
+          width: 117px;
+        }
+      }
       
     }
 
 }
-
-.currentReading{
-  background-color: white;
-  padding: .75em; 
-  width: 50%; 
-  border-radius: 30px 30px 0px 30px; 
-  left: 0;
-  top: 5%; 
-  position: absolute;
-  @include breakpoint(md){ 
-    padding: 2em;      
-        width: 40%;
-        right: 50%;
-        left: auto; 
-  top: 15%; 
-   } 
- 
+.currentTemp{
+  font-size: 100px;
+  color: white;
+  text-shadow: .05em .05em #111111;
 }
-.current{
-  padding: 2% 3% 0; 
-  position: relative;
+.currentDescription{
+  font-size: 65px;
+  color: white;
+  text-shadow: .05em .05em #111111;
+}
+.currentImage{
+  width: 80px;
+  margin-left: 30px;
+}
+.currentContainer{
+  display: flex;
+}
+.feelsLike{
+  color: white;
+  font-style: italic;
+  padding-bottom: 1em;
+  align-self: end;
+}
+.heroText{
+  padding: 20vh 0 0 10vw;
+  h2{
+    padding: 0 140px 0 0;
+    line-height: 27px;
+  }
+}
+.heroImage{
+  padding: 10vh 0 0 0;
+  img{
+    width: 100%;
+  }
+  @include breakpoint(md){ 
+    
+  img{
+    height: 100%;
+  }
+  }
+} 
+
+.current{ 
   background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
-  
-  
-  
- 
+  background-repeat: no-repeat; 
+  min-height: 90vh;
   @include breakpoint(md){ 
-    padding: 2% 10% 0; 
+    
+    
    } 
 }
-.currentBox{
-  padding: 2% 0 0 ; 
-  position: relative;
-  
-  
-  @include breakpoint(md){ 
-    padding: 2% 8% 0 ; 
-   } 
-}
+
+
+
 
 .hourWrap{
   padding: 1% 3% 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   @include breakpoint(md){ 
-    padding: 1% 15% 0;
+    padding:0 15%;
    }
 
 }
 .dayWrap{
-  padding: 15px 3% 0;
+  padding: 15px 1% 0;
   @include breakpoint(md){ 
-    padding: 15px 15% 0;
+    padding: 15px 5% 0;
    }
 
 }
+
 .day{
-  width: 120px;
-  margin: .4em;
+  width: 160px;
+  margin: 20px 0;
+ text-align: center;
+  padding: 10px;
+  border-top: solid 4px black;
+  border-bottom: solid 4px black;
+  border-left: solid 2px black;
+  border-right: solid 2px black;
   p{
-    margin-top: .5em;
+   
+    color: white;
   }
+  h5{
+    color: white;
+  }
+ 
+ 
   @include breakpoint(md){ 
-    width: 200px;
+    
+   
+    
+   width:  250px;
    }
 
 }
 
+.cardHeader{
+  h5, p{
+    font-size: 18x;
+    font-weight: 400;
+    margin: 0;
+    @include breakpoint(md){
+    font-size: 22px;
+    
+    }
+  }
+}
+.cardImage{
+  height: 80px;
+  img{height: 100%;}
+  @include breakpoint(md){
+    margin-top: 20px;
+    height: 150px;
+    img{height: auto} 
+  
+  }
+}
+
+button{
+  text-align: center;
+  background: blue;
+  color: white;
+  padding: .5em 1em;
+  font-family: $primary-font;
+  font-size: 20px;
+
+}
+
+.rainDrop{
+  width: 10px;
+  height: 15px;
+  margin-top: 5px;
+  @include breakpoint(md){ 
+    padding: 0;
+    width: 20px;
+    
+
+  }
+ 
+}
