--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -53,10 +53,20 @@
   align-self: end;
 }
 .heroText{
-  padding: 20vh 0 0 10vw;
+  
+  padding: 5vh 0 0 10vw;
   h2{
-    padding: 0 140px 0 0;
+    padding: 0 70px 0 0;
     line-height: 27px;
+    color: white;
+  }
+
+  @include breakpoint(md){ 
+    padding: 20vh 0 0 10vw;
+    h2{
+      padding: 0 140px 0 0;
+      line-height: 27px;
+    }
   }
 }
 .heroImage{
